--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,12 @@
 {
   "name": "ai-task-manager-frontend",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "private": true,  "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@mui/x-date-pickers": "^6.0.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
@@ -19,11 +15,25 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "cypress": "^12.7.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "start-server-and-test": "^2.0.0"
+  },"scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:ci": "react-scripts test --watchAll=false",
+    "lint": "eslint src",
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:3000 cypress:run"
   },
   "eslintConfig": {
     "extends": [
